# clef-note

./: .gitignore  API.md  AUTHENTICATION.md  GIT_SYNC.md  MCP.md  PARTITIONS.md  README.md  clef-note.toml.example  docker-entrypoint.sh  package-lock.json
.github/workflows/: release.yml
backend/: Cargo.toml
backend/src/: auth.rs  backlinks.rs  config.rs  db.rs  drawings.rs  folders.rs  frontend.rs  frontmatter.rs  main.rs  mcp.rs  move_notes.rs  notes.rs  oidc.rs  partition.rs  partitions.rs  query.rs  seed.rs  settings.rs  shares.rs  sync.rs  vaults.rs
backend/src/defaults/: Help.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: app.css  app.html  service-worker.ts
frontend/src/lib/: Backlinks.svelte  BubbleMenu.svelte  CommandPalette.svelte  ConfirmDialog.svelte  Editor.svelte  FrontmatterEditor.svelte  LinkPrompt.svelte  LoginPage.svelte  MediaAssets.svelte  MediaDrawings.svelte  MediaNoFrontmatter.svelte  MediaShares.svelte  MediaStubs.svelte  MetaPage.svelte  MobileTopBar.svelte  NoteEditorPane.svelte  NoteIcon.svelte  PartitionSwitcher.svelte  RawSource.svelte  Settings.svelte  SettingsAppearance.svelte  SettingsGeneral.svelte  SettingsSecurity.svelte  SettingsSync.svelte  ShareModal.svelte  SharedNote.svelte  Sidebar.svelte  TableToolbar.svelte  TitleBar.svelte  VaultSwitcher.svelte  api.ts  (+25 more)
frontend/static/: manifest.webmanifest
partitions/: settings.json
partitions/notes/: Help.md  Home.md  Oulala.md  partition.toml
partitions/partition/: Poppy.md  partition.toml
scripts/: cn
storagen/notes/: Help.md  Home.md
(+11 files in other folders)
